# ML-learning

./: .gitignore  CO2-prediction-feaute-selection.ipynb  FineTuning.ipynb  HandsOnML.ipynb  IsolationForest_v0.1.ipynb  KNeighborsClassifier-tele-churns.ipynb  LinearRegression-diabetes.ipynb  XGBoostRegression.ipynb  kaggle.json  pyproject.toml
Supervised/Classification/: teleco-churns.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/co2/: CoM-Emission-factors-for-national-electricity-2024.xlsx  GlobalCO2Emissions.csv  co2_source.xlsx  korean_cities_environmental_data_fake.csv
food_price/: FoodTashkent.ipynb  README.md  config.py  train.py
food_price/datasets/: currency_monthly.csv  fuel_monthly.csv  population_monthly.csv  prices.csv  weather_monthly.csv
food_price/datasets/cbu/: cbu_rates_2021-01-01-2021-12-31_en.xls  cbu_rates_2022-01-01-2022-12-31_en.xls  cbu_rates_2023-01-01-2023-12-31_en.xls  cbu_rates_2024-01-01-2024-12-31_en.xls  cbu_rates_2025-01-01-2025-12-31_en.xls  cbu_rates_2026-01-01-2026-12-31_en.xls
food_price/pipeline/: __init__.py  data.py  evaluate.py  explain.py  features.py  models.py  split.py
food_price/reports/: feature_importance.csv  metrics.csv
food_price/utils/: curr_scrap.py  currency.py  featuring.py  fuel.py  fuel_scrap.py  population.py  weather.py
notebooks/: CaliforniaHousing.ipynb  ClfMNIST.ipynb  RegCaliforniaHousing.ipynb
