[project]
name = "ml-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "yusufjonc07",email = "ahmedovyusufjon3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyter-contrib-nbextensions (>=0.7.0,<0.8.0)",
    "jupyterlab (>=4.4.10,<5.0.0)",
    "jupyterlab-lsp (>=5.2.0,<6.0.0)",
    "python-lsp-server[all] (>=1.13.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
